tests/paczka1/fuzzy1/65572792.err
Error in line 1: DEQTh A715 92,5
Error in line 3: S765 S288 75,5
Error in line 6: S765 A715 72,6
Error in line 13: NcAoPri3Q S85 7,40
Error in line 15: DEQTh A715 37,0
Error in line 16: NcAoPri3Q S85 32,8
Error in line 20: 6GTG32KgeWp S765 53,0
Error in line 36: DEQTh A715 99,8
